# prepview

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  test_hip  test_hip.rs  vite.config.ts
.archive/: README.md
.archive/docs/: ARCHITECTURE.md  FRONTEND_PLAN.md  INTEGRATION_MATRIX.md  NEXUS_TERMINAL_CONTAMINATION_AUDIT_2026-04-03.md  PRODUCT_DOCTRINE.md
.archive/mockups/: 03_dense_grid.html  05_cassini_operator_desk.html
.archive/scratch/: run_puppeteer.cjs  test_funding.rs
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: ACCEPTANCE.md  ARCHITECTURE.md  CONNECTOR_EVIDENCE.md  DEVELOPMENT.md  FRONTEND_DOCTRINE.md  FRONTEND_RESEARCH.md  OSS_EVALUATION.md
mockups/: 01_command_center.html  02_glass_terminal.html  04_gradient_depth.html
src/: App.test.tsx  App.tsx  ProductApp.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  connectors.rs  credentials.rs  csv_import.rs  domain.rs  error.rs  lan.rs  lib.rs  main.rs  metrics.rs  risk_engine.rs  secret_store.rs  store.rs
src-tauri/src/fixtures/: blofin_balance_doc.json  blofin_funding_rate_live.json  blofin_instruments_live.json  blofin_positions_doc.json  hyperliquid_all_mids.json  hyperliquid_clearinghouse_state.json  hyperliquid_meta_and_asset_ctxs_live.json  hyperliquid_predicted_fundings.json
src/lib/: bridge.ts  fmt.test.ts  fmt.ts  fundingView.test.ts  fundingView.ts  positionView.ts  syncHealth.test.ts  syncHealth.ts  (+1 more)
(+45 files in other folders)
