[package]
name = "prepview"
version = "0.1.2"
description = "Local-first derivatives portfolio desktop app"
authors = ["RealDeep17"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "prepview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
hmac = "0.12.1"
hex = "0.4.3"
log = "0.4.28"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher-vendored-openssl", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.8.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
